--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,94 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+<html lang="en">
+
+<head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Free Wallpapers from Reddit on Telegram channel">
+    <meta name="author" content="Neel Bhave">
+
+    <title>Awesome Wallpaper</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .feed {
+            border-style: solid;
+            border-width: 1;
+            border: black;
+            padding: 10px;
+            width: fit-content;
+            align-content: center;
+        }
+    </style>
+</head>
+
+<body>
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">Awesome Wallpapers</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <!-- <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home
+              <span class="sr-only">(current)</span>
+            </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div> -->
+        </div>
+    </nav>
+
+    <!-- Page Content -->
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h1 class="mt-3">
+                    <a href="https://t.me/awesomewallp">Join Awesome wallpapers !</a>
+                </h1>
+                <p class="lead"><a href="https://t.me/awesomewallp">Awesome Wallpapers</a> provides you the best wallpapers from Reddit, daily! Thanks to the <a href="https://github.com/neelgeek/AWPbot">Awesome Wallpaper Bot</p>
+
+                <p></p>
+                <div class="feed">
+                    <div>
+                        <script async src="https://telegram.org/js/telegram-widget.js?7" data-telegram-post="awesomewallp/181" data-width="100%"></script>
+                    </div>
+                    <div>
+                        <script async src="https://telegram.org/js/telegram-widget.js?7" data-telegram-post="awesomewallp/174" data-width="100%"></script>
+                    </div>
+                    <div>
+                        <script async src="https://telegram.org/js/telegram-widget.js?7" data-telegram-post="awesomewallp/172" data-width="100%"></script>
+                    </div>
+                    <div>
+                        <script async src="https://telegram.org/js/telegram-widget.js?7" data-telegram-post="awesomewallp/167" data-width="100%"></script>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    </div>
+    </div>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.slim.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+</body>
+
 </html>
