Google tracking and sitemap added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,18 @@
             align-content: center;
         }
     </style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108423528-4"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+        gtag('config', 'UA-108423528-4');
+    </script>
+
 </head>
 
 <body>
@@ -61,29 +73,31 @@
                 <h1 class="mt-3">
                     <a href="https://t.me/awesomewallp">Join Awesome wallpapers !</a>
                 </h1>
-                <p class="lead"><a href="https://t.me/awesomewallp">Awesome Wallpapers</a> provides you the best wallpapers from Reddit, daily! Thanks to the <a href="https://github.com/neelgeek/AWPbot">Awesome Wallpaper Bot</p>
-
-                <p></p>
-                <div class="feed">
-                    <div>
-                        <script async src="https://telegram.org/js/telegram-widget.js?7" data-telegram-post="awesomewallp/181" data-width="100%"></script>
-                    </div>
-                    <div>
-                        <script async src="https://telegram.org/js/telegram-widget.js?7" data-telegram-post="awesomewallp/174" data-width="100%"></script>
-                    </div>
-                    <div>
-                        <script async src="https://telegram.org/js/telegram-widget.js?7" data-telegram-post="awesomewallp/172" data-width="100%"></script>
-                    </div>
-                    <div>
-                        <script async src="https://telegram.org/js/telegram-widget.js?7" data-telegram-post="awesomewallp/167" data-width="100%"></script>
-                    </div>
+                <p class="lead"><a href="https://t.me/awesomewallp">Awesome Wallpapers</a> provides you the best wallpapers from Reddit, daily! Thanks to the <a href="https://github.com/neelgeek/AWPbot">Awesome Wallpaper Bot</a></p>
+                <div>
+                    <p class="lead">This Channel and Bot is created by <a href="https://neelbhave.me">Neel Bhave</a></p>
                 </div>
             </div>
         </div>
     </div>
+
+    <p></p>
+    <div class="feed">
+        <div>
+            <script async src="https://telegram.org/js/telegram-widget.js?7" data-telegram-post="awesomewallp/181" data-width="100%"></script>
+        </div>
+        <div>
+            <script async src="https://telegram.org/js/telegram-widget.js?7" data-telegram-post="awesomewallp/174" data-width="100%"></script>
+        </div>
+        <div>
+            <script async src="https://telegram.org/js/telegram-widget.js?7" data-telegram-post="awesomewallp/172" data-width="100%"></script>
+        </div>
+        <div>
+            <script async src="https://telegram.org/js/telegram-widget.js?7" data-telegram-post="awesomewallp/167" data-width="100%"></script>
+        </div>
     </div>
-    </div>
-    </div>
+
+
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.slim.min.js"></script>
