--- a/views/index.ejs
+++ b/views/index.ejs
@@ -71,9 +71,9 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h1 class="mt-3">
-                    <a href="https://t.me/awesomewallp">Join Awesome wallpapers !</a>
+                    <a href="https://t.me/wallpapers_daily">Join Awesome wallpapers !</a>
                 </h1>
-                <p class="lead"><a href="https://t.me/awesomewallp">Awesome Wallpapers</a> provides you the best wallpapers from Reddit, daily! Thanks to the <a href="https://github.com/neelgeek/AWPbot">Awesome Wallpaper Bot</a></p>
+                <p class="lead"><a href="https://t.me/wallpapers_daily">Awesome Wallpapers</a> provides you the best wallpapers from Reddit, daily! Thanks to the <a href="https://github.com/neelgeek/AWPbot">Awesome Wallpaper Bot</a></p>
                 <div>
                     <p class="lead">This Channel and Bot is created by <a href="https://neelbhave.me">Neel Bhave</a></p>
                 </div>
@@ -84,16 +84,16 @@
     <p></p>
     <div class="feed">
         <div>
-            <script async src="https://telegram.org/js/telegram-widget.js?7" data-telegram-post="awesomewallp/181" data-width="100%"></script>
+            <script async src="https://telegram.org/js/telegram-widget.js?7" data-telegram-post="wallpapers_daily/181" data-width="100%"></script>
         </div>
         <div>
-            <script async src="https://telegram.org/js/telegram-widget.js?7" data-telegram-post="awesomewallp/174" data-width="100%"></script>
+            <script async src="https://telegram.org/js/telegram-widget.js?7" data-telegram-post="wallpapers_daily/174" data-width="100%"></script>
         </div>
         <div>
-            <script async src="https://telegram.org/js/telegram-widget.js?7" data-telegram-post="awesomewallp/172" data-width="100%"></script>
+            <script async src="https://telegram.org/js/telegram-widget.js?7" data-telegram-post="wallpapers_daily/172" data-width="100%"></script>
         </div>
         <div>
-            <script async src="https://telegram.org/js/telegram-widget.js?7" data-telegram-post="awesomewallp/167" data-width="100%"></script>
+            <script async src="https://telegram.org/js/telegram-widget.js?7" data-telegram-post="wallpapers_daily/167" data-width="100%"></script>
         </div>
     </div>
 
